Thu Oct 16 20:58:52 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tao/ORB_Core.cpp (list_initial_references): This method should
          return the registered service name, not the object reference.
          Thanks to Alexandre Skrzyniarz <alexandre dot skrzyniarz at fr
          dot thalesgroup dot com> for providing this fix.

Thu Oct 16 14:45:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/Notify_Service/NT_Notifiy_Server.cpp:
        * orbsvcs/Notify_Service/NT_Notifiy_Service.cpp:
        * orbsvcs/Naming_Service/NT_Naming_Server.cpp:
        * orbsvcs/Naming_Service/NT_Naming_Service.cpp:

          WCHAR changes.

Thu Oct 16 14:30:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/examples/Imr/Advanced/TestServer.h:

          WCHAR changes.

Thu Oct 16 14:10:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/Security/EndpointPolicy/test.cpp:
        * orbsvcs/tests/Security/InsecureReferences/test.cpp:

          WCHAR changes.

Thu Oct 16 10:41:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1361_Regression/client.cpp:
        * tests/Bug_1361_Regression/Echo.cpp:
          Use ACE_OS::raise to fix compile errors with WinCE

Thu Oct 16 09:39:08 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * orbsvcs/tests/Bug_1395_Regression/Makefile.am:

          Fixed a compile error on autoconf builds.

Wed Oct 15 15:35:50 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/constants.idl:
        * tests/IDL_Test/main.cpp:

          Added code to check that a signed long integer constant
          rhs value gets generated as such and not as an unsigned
          literal, which would precipitate compile a warning.

Wed Oct 15 12:08:01 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * orbsvcs/tests/Bug_3216_Regression/server.cpp:
        * orbsvcs/tests/Bug_1395_Regression/server.cpp: