@@ -1,3 +1,13 @@
+Fri Oct 17 10:35:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
+
+        * orbsvcs/orsvcs/Naming/Naming_Context_Interface.cpp:
+        * orbsvcs/tests/Security/EndpointPolicy/test.cpp:
+        * orbsvcs/examples/Imr/Advanced/TestClient.h:
+        * orbsvcs/Notify_Service/NT_Notifiy_Server.cpp:
+        * orbsvcs/Naming_Service/NT_Naming_Server.cpp:
+
+          WCHAR changes.
+
 Thu Oct 16 20:58:52 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * tao/ORB_Core.cpp (list_initial_references): This method should
